making PMD happier